# project_fem2geo

./: README.md  pyproject.toml
examples/a_points2crs/: config_interface.yml  config_intraslab.yml
examples/b_mesh2crs/: config_bot.yml  config_top.yml
examples/c_points2fem/: config.yml
examples/d_mesh2fem/: config.yml
examples/e_topo2fem/: config_bathy.yml  config_topo.yml
project_fem2geo/: __init__.py  cli.py  core.py
